--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
+	<style>
+        .container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            width: 90%;
+            max-width: 800px;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p, ul {
+            color: #666;
+        }
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                padding: 15px;
+            }
+        }
+    </style>
 </head>
 <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
@@ -103,8 +125,42 @@
                 </div>
             </section>
         </main>
-    </div>
+    <div class="container">
+		<h1>Chính Sách Bảo Mật</h1>
+        <p>Ngày có hiệu lực: Fri 29 Mar 2024</p>
+		<h2>Thông Tin Chúng Tôi Thu Thập</h2>
+        <p>Chúng tôi thu thập thông tin sau khi bạn sử dụng Ứng dụng:</p>
+        <ul>
+            <li>Thông tin về cách bạn sử dụng Ứng dụng, bao gồm thông tin về các tính năng bạn sử dụng và thời gian bạn sử dụng chúng.</li>
+        </ul>
 
+        <h2>Cách Chúng Tôi Sử Dụng Thông Tin</h2>
+        <p>Chúng tôi sử dụng thông tin chúng tôi thu thập để:</p>
+        <ul>
+            <li>Cung cấp, duy trì, và cải thiện Ứng dụng.</li>
+            <li>Phản hồi các câu hỏi và phản hồi của bạn.</li>
+            <li>Gửi thông tin quan trọng, như cập nhật về Ứng dụng hoặc chính sách bảo mật.</li>
+			<li>Sử dụng với mục đích quảng cáo phù hợp với nhu cầu của người dùng</li>
+        </ul>
+
+        <h2>Chia Sẻ Thông Tin Cá Nhân</h2>
+        <p>Chúng tôi không bán, cho thuê, hoặc chia sẻ thông tin cá nhân của bạn với bên thứ ba, trừ trường hợp:</p>
+        <ul>
+            <li>Có sự đồng ý từ bạn.</li>
+            <li>Để tuân thủ luật pháp, như phản hồi lệnh tòa án.</li>
+        </ul>
+
+        <h2>Quyền của Bạn</h2>
+        <p>Bạn có quyền truy cập, sửa đổi, và xóa thông tin cá nhân của mình. Nếu bạn muốn thực hiện bất kỳ quyền nào của mình, vui lòng liên hệ với chúng tôi tại [Địa chỉ email liên hệ].</p>
+
+        <h2>Thay Đổi Chính Sách Bảo Mật</h2>
+        <p>Chúng tôi có thể cập nhật Chính Sách Bảo Mật của mình từ thời gian này sang thời gian khác. Chúng tôi sẽ thông báo cho bạn về bất kỳ thay đổi nào bằng cách đăng tin tại nơi nổi bật trên Ứng dụng của chúng tôi và/hoặc thông qua email.</p>
+
+        <p>Nếu bạn có bất kỳ câu hỏi nào về Chính Sách Bảo Mật này, vui lòng liên hệ với chúng tôi tại teach1997@icloud.com.</p>
+    </div>
+<div>
+
+</div>
     <script src="dist/js/main.min.js"></script>
 </body>
 </html>
